--- a/C++/Makefile
+++ b/C++/Makefile
@@ -1,21 +1,12 @@
-ifeq ($(OS), Windows_NT)
-	CC = g++
-else
-	CC = clang++
-endif
+CC = clang++
 
 COMMON_FLAGS = -std=c++17 -Wall -Werror -Wpedantic
 DEBUG_FLAGS = -g -O0
 RELEASE_FLAGS = -O3
 
 BIN = bin
-SRC = src/*.cpp
+SRC = $(wildcard src/*.cpp)
 EXE = $(BIN)/bfvm
-ifeq ($(OS), Windows_NT)
-	LIBS = -lkernel32
-else
-	LIBS = 
-endif
 
 $(BIN):
 	mkdir $(BIN)
@@ -24,11 +15,11 @@ $(BIN):
 
 all: release
 
-debug: $(BIN) |
-	$(CC) $(DEBUG_FLAGS) $(COMMON_FLAGS) -o $(EXE) $(SRC) $(LIBS)
-
 release: $(BIN) |
-	$(CC) $(RELEASE_FLAGS) $(COMMON_FLAGS) -o $(EXE) $(SRC) $(LIBS)
+	$(CC) $(RELEASE_FLAGS) $(COMMON_FLAGS) -o $(EXE) $(SRC)
+
+debug: $(BIN) |
+	$(CC) $(DEBUG_FLAGS) $(COMMON_FLAGS) -o $(EXE) $(SRC)
 
 clean:
 	rm -f $(EXE)
