--- a/bfvm-c/src/Makefile
+++ b/bfvm-c/src/Makefile
@@ -1,20 +1,24 @@
-CC = cc
+CC = clang
 
 CFLAGS = -Wall -Werror -Wpedantic -Wextra -std=c99
 ifeq ($(MAKECMDGOALS), release)
 	CFLAGS += -O3 -DNDEBUG
+else
+	CFLAGS += -O0 -g
 endif
 
-SRC_DIR = src
-BIN_DIR = bin
-LOCALBIN = ~/.local/bin
+SRC_DIR = .
+BFC_DIR =  $(SRC_DIR)/bfc
+BIN_DIR = ../bin
 
-SRC_FILES = $(wildcard $(SRC_DIR)/*.c)
+SRC_FILES = $(wildcard $(SRC_DIR)/*.c $(BFC_DIR)/*.c)
 OBJ_FILES = $(patsubst %.c, $(BIN_DIR)/%.o, $(SRC_FILES))
+
+INCL = -I$(SRC_DIR)
 
 TARGET = $(BIN_DIR)/bfvm
 
-.PHONY: all release install uninstall clean
+.PHONY: all release clean
 
 all: $(TARGET)
 
@@ -25,14 +29,7 @@ $(TARGET): $(OBJ_FILES)
 
 $(BIN_DIR)/%.o: %.c
 	@mkdir -p $(dir $@)
-	$(CC) $(CFLAGS) -c $< -o $@
-
-install:
-	mkdir -p $(LOCALBIN)
-	install $(TARGET) $(LOCALBIN)
-
-uninstall:
-	rm -f $(LOCALBIN)/bfvm
+	$(CC) $(CFLAGS) -c $< -o $@ $(INCL)
 
 clean:
 	rm -f $(TARGET) $(OBJ_FILES)
