--- a/bfvm-cpp/src/Makefile
+++ b/bfvm-cpp/src/Makefile
@@ -1,15 +1,20 @@
-CC = c++
+CC = clang++
 
-CFLAGS = -Wall -Werror -Wextra -Wpedantic -fno-exceptions -std=c++23
+CFLAGS = -Wall -Werror -Wextra -Wpedantic -std=c++23 -fno-exceptions
 ifeq ($(MAKECMDGOALS), release)
 	CFLAGS += -O3 -DNDEBUG
+else
+	CFLAGS += -O0 -g
 endif
 
-SRC_DIR = src
-BIN_DIR = bin
+SRC_DIR = .
+COMPILER_DIR = $(SRC_DIR)/Compiler
+BIN_DIR = ../bin
 
-SRC_FILES = $(wildcard $(SRC_DIR)/*.cpp)
+SRC_FILES = $(wildcard $(SRC_DIR)/*.cpp $(COMPILER_DIR)/*.cpp)
 OBJ_FILES = $(patsubst %.cpp, $(BIN_DIR)/%.o, $(SRC_FILES))
+
+INCL = -I$(SRC_DIR)
 
 TARGET = $(BIN_DIR)/bfvm
 
@@ -24,7 +29,7 @@ $(TARGET): $(OBJ_FILES)
 
 $(BIN_DIR)/%.o: %.cpp
 	@mkdir -p $(dir $@)
-	$(CC) $(CFLAGS) -c $^ -o $@
+	$(CC) $(CFLAGS) -c $^ -o $@ $(INCL)
 
 clean:
 	rm -f $(TARGET) $(OBJ_FILES)
