Added _CRT_SECURE_NO_WARNINGS definition

--- a/bfc/CMakeLists.txt
+++ b/bfc/CMakeLists.txt
@@ -20,6 +20,7 @@ add_library(bfc STATIC ${BFC_SOURCES} ${BFC_HEADERS})
 
 if(MSVC)
     target_compile_options(bfc PRIVATE /W4 /WX)
+    target_compile_definitions(bfc PRIVATE _CRT_SECURE_NO_WARNINGS)
 else()
     target_compile_options(bfc PRIVATE -Wall -Werror -Wpedantic -Wextra)
 endif()
